@@ -1,19 +1,25 @@
 <rules>
 	<rule	Name="GetLastErrorMustBeCalledRightAfterPInvokeRule" 
 		Type="Gendarme.Rules.Interoperability.GetLastErrorMustBeCalledRightAfterPInvokeRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Uri="http://www.mono-project.com/Gendarme.Rules.Interoperability#CallGetLastErrorAfterPInvokeRule" >
 		<problem>GetLastError is called too late after the p/invoke call. It's possible it's value could have changed.</problem>
 		<solution>Move the call to GetLastError just after the p/invoke call.</solution>
 	</rule>
+	<rule	Name="MarshalStringsInPInvokeDeclarationsRule" 
+		Type="Gendarme.Rules.Interoperability.MarshalStringsInPInvokeDeclarationsRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
+		Uri="http://www.mono-project.com/Gendarme.Rules.Interoperability#MarshalStringsInPInvokeDeclarationsRule" >
+		<problem>The method '{0}' doesn't specify how strings should be marshaled.</problem>
+		<solution>Specify how the string or StringBuilder should be marshaled.</solution>
+	</rule>
 	<rule	Name="PInvokeShouldNotBeVisibleRule" 
 		Type="Gendarme.Rules.Interoperability.PInvokeShouldNotBeVisibleRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Uri="http://www.mono-project.com/Gendarme.Rules.Interoperability#PInvokeShouldNotBeVisibleRule" >
 		<problem>P/Invoke methods should not be visible outside the assembly.</problem>
 		<solution>Don't direcly export p/invoke. Wrap them in a class and provide adequate parameter validations.</solution>
 	</rule>
 	<rule	Name="UseManagedAlternativesToPInvokeRule" 
-		Type="Gendarme.Rules.Interoperability.PInvokeShouldNotBeVisibleRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
-		Uri="" >
+		Type="Gendarme.Rules.Interoperability.UseManagedAlternativesToPInvokeRule, Gendarme.Rules.Interoperability, Version=@VERSION@, Culture=neutral, PublicKeyToken=null"
+		Uri="http://www.mono-project.com/Gendarme.Rules.Interoperability#UseManagedAlternativesToPInvokeRule" >
 		<problem>Method {0} contains a P/Invoke call that could be replaced with a managed call.</problem>
 		<solution>Try to avoid p/invoke and replace this call with it's managed alternative.</solution>
 	</rule>
